Fix oeth dapp spacing and rouge border line on ousd modal

--- a/dapp/styles/globals.css
+++ b/dapp/styles/globals.css
@@ -424,6 +424,7 @@ section.dim {
 
 .modal-content {
   background-color: transparent !important;
+  border: none !important;
 }
 
 @media (max-width: 992px) {
